@@ -1,3 +1,8 @@
+Mon Dec 18 11:00:14 2000  Nanbor Wang  <nanbor@cs.wustl.edu>
+
+	* tests/MEM_Stream_Test.cpp: Fixed problems when threads are not
+	  supported and when explicit template instantiation is required.
+
 Sun Dec 17 20:11:08 2000  Nanbor Wang  <nanbor@cs.wustl.edu>
 
 	* tests/MEM_Stream_Test.cpp:
